<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"

        android:layout_height="match_parent">


        <EditText
            android:id="@+id/Email_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="15dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/LBL_EMAIL_ADDRESS"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/MobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Email_ID"
            android:layout_margin="15dp"
            android:layout_marginTop="24dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_MOBILE_NO"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/MobileNo"
            android:layout_margin="15dp"
            android:layout_marginTop="24dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_PASSWORD"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/signup_password"
            android:layout_margin="15dp"
            android:layout_marginTop="22dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_CONFIRM_PASSWORD"
            android:textSize="22dp" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/refferalCode"


            android:layout_margin="15dp"

            android:gravity="center"
            android:text="Save"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/refferalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/age"
            android:layout_margin="15dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/LBL_REFERRAL_CODE"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/confirm_password"
            android:layout_margin="15dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_ADDRESS"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/address"
            android:layout_margin="15dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_LOCALITY"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/locality"
            android:layout_margin="15dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_CITY"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/State"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/city"
            android:layout_margin="15dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_STATE"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/State"
            android:layout_margin="15dp"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/LBL_AGE"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/Credit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>
</ScrollView>
