<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="10dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/aboutUsImage"
                android:layout_width="203dp"
                android:layout_height="201dp"
                android:padding="15dp"
                android:src="@drawable/phnoav" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/aboutUsCompanyName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/companyName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/aboutUsCompanyDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/companyDetail"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/aboutUsLabelAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/LBL_ADDRESS"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/aboutUsCompanyAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/companyAddress"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/aboutUsCompanyEmailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/companyEmailAddress"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/aboutUsCompanyMobNo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/companyMobNo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/aboutUsCompanyContactPerson"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/aboutUsCompanyLabelTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="Terms And Conditions"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/aboutUsCompanyTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>