<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC"
        android:orientation="vertical">

        <Button
            android:id="@+id/buyDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LBL_BUY_DEAL"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:layout_margin="5dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/eventDetailImage"
                android:layout_width="match_parent"
                android:layout_height="208dp"

                android:scaleType="fitXY"
                android:src="@drawable/phnoav" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventDetailEventName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""

                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/eventDetailDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/LBL_DESCRIPTION"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/eventDetailDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/eventDetailAttractionPointLBL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/LBL_ATTRACTION_POINT"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/eventDetailAttractionPoint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/eventDetailEventStartDateTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/eventDetailEventEndDateTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/eventDetailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/eventDetailOrganizerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/LBL_ORGANIZER_DETAIL"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/eventDetailOrganizerDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/screen_bg"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/eventDetailLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/LBL_LOCATION"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/eventDetailLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>